--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -46,8 +46,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/parametrage, roles: ROLE_ADMIN }
+         - { path: ^/profil, roles: ROLE_USER }
     role_hierarchy:
             ROLE_TECHNICIEN:    [ROLE_USER]
             ROLE_GESTIONNAIRE:  [ROLE_TECHNICIEN]
